# momenTUM-json-maker

./: .dokku-monorepo  .gitignore  Caddyfile  README.md  docker-compose.local.yml  docker-compose.yml  example.json  package-lock.json  package.json  run.bash  schema.json  schema2.json  schema_with_examples.json  test.js  todo.md  tsconfig.json  types.d.ts  update.sh  vite.config.ts
.github/actions/: build.yml
.github/workflows/: .deploy.yml  build.yml  deploy.yml  test.yml
api/: Cargo.toml  Dockerfile  README.md  Rocket.toml
api/src/: error.rs  main.rs  redcap.rs  study.rs  users.rs
api/tests/: database_test.rs  integration_test.rs  test.rs  unit_test.rs
api/tests/common/: mod.rs
backend/: Cargo.toml  Dockerfile  Rocket.toml  payload.json
backend/src/: db.rs  error.rs  git.rs  lib.rs  main.rs  redcap.rs  structs.rs  studies.rs  study.rs
backend/tests/: test.rs
cypress/fixtures/: example.json
cypress/integration/: app.spec.js
frontend/: .gitignore  Dockerfile  README.md  index.html  index.js  index.tsx  package.json  playwright.config.ts  schema.json  tailwind.config.js  tsconfig.json  types.d.ts  vite.config.ts
frontend/assets/: calendar.tsx  delete.tsx  download.tsx  drag.tsx  load.tsx  plus.tsx  rotate.tsx  save.tsx  upload.tsx
frontend/cypress/: tsconfig.json
frontend/cypress/e2e/: app.cy.js
frontend/cypress/fixtures/: example.json
frontend/cypress/integration/: app.spec.js
frontend/schema/: _study_schema.ts  activity6.json  alerts.ts  all.ts  all_test.ts  graph.ts  module.ts  params.ts  paramsPVT.ts  paramsSurvey.ts  properties.ts  pvt.ts  question.ts  schema.ts  section.ts  study.ts  study_object.ts  study_schema.ts  study_validator.ts  survey.ts
frontend/src/: App.tsx  Calendar.tsx  Commit.tsx  CustomNodes.tsx  Download.tsx  Form.tsx  Graph.tsx  Layout.tsx  Menu.tsx  Modal.tsx  NewNode.tsx  QR.tsx  RedcapProjectCreation.tsx  Settings.tsx  State.ts  ToC.tsx  Upload.tsx  index.css  state.ts  tools.ts
frontend/src/components/: Form.tsx
frontend/src/helpers/: customNode.tsx  initial-elements.tsx  initialValues.ts
frontend/src/renderers/: Calendar.tsx  ChecklistModal.tsx  CustomNodes.tsx  DialogSelect.tsx  Form.tsx  Graph.tsx  Layout.tsx  Menu.tsx  Nav.tsx  QR.tsx  Settings.tsx
frontend/src/renderers/actions/: Commit.tsx  Download.tsx  RedcapProjectCreation.tsx  Upload.tsx
frontend/src/renderers/controllers/: Modal.tsx
frontend/src/renderers/uischema/: ModuleSchema.tsx  SurveySchema.tsx  modules.tsx  paramsPVT.tsx  properties.tsx  survey.tsx
frontend/src/services/: actions.ts  validations.ts
frontend/src/types/: guards.ts  types.d.ts
frontend/src/utils/: actions.ts  alignNodes.ts  calcGraphFromAtoms.ts  calcTimelineFromAtoms.ts  calculatorsFromAtoms.ts  construct.ts  deconstruct.ts  deleteNode.ts  dragFix.ts  hideAtoms.ts  hideNodes.ts  initialValues.ts  odmExport.ts  scheduler.ts  typeGuards.ts  useTimeline.ts  utils.test.ts
frontend/tests/: App.test.tsx  setup.ts
frontend/tests/feature/integration/: main-action-upload.spec.ts  main-action.spec.ts  main-rotate.spec.ts  main-switch.spec.ts  main-validate.spec.ts
frontend/tests/feature/uploads/: example.json  test.json
frontend/tests/integration/: main-action.spec.ts  main-validate.spec.ts  main.spec.ts
frontend/tests/unit/helpers/: drag.fix.test.ts  drag.fix.test.tsx  utils.test.tsx
frontend/tests/unit/renderers/: actions.test.ts  actions.test.tsx  commit.test.tsx  (+4 more)
redbot/: Dockerfile  docker-compose.yml
redcap/: Dockerfile  requirements.txt  server.py  server_test.py
server/: .env.example  Dockerfile  package.json  server.js  utils.js  utils.test.js
server/surveys/: demo.json
src/: App.tsx  ToC.tsx  main.tsx  schema.ts
studies/: angle.json  atoms.json  maydel.json  monster.json  pilot.json  sleep.json  study.json  test.json
(+12 files in other folders)
