[package]
name = "designer"
version = "0.2.0"
edition = "2021"
authors = ["Constantin Goeldel <constantin.goeldel@tum.de>"]
description = "The REST API serving the momenTUM-json maker and the momenTUM app"
license = "GPL-3.0-or-later"
homepage = "https://tuspl22-momentum.srv.mwn.de/"
repository = "https://github.com/TUMChronobiology/momenTUM-json-maker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
mongodb = "2.3.0"
base64 = "0.13.0"
sha2 = "0.10"
serde-xml-rs = "0.6.0"
rand = "0.8.5"
lazy_static = "1.4.0"
serde_urlencoded = "0.7.1"
fake = "2.6.1"


[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["mongodb"]

[lib]
name = "api"
path = "src/main.rs"
crate-type = ["rlib"]
