[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
actix-cors = "0.6.1"
actix-multipart-extract = "0.1"
# actix-multipart = "0.4.0"