[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
actix-cors = "0.6.1"
actix-multipart-extract = "0.1"
fancy-regex = "0.7.1"
chrono = "0.4"
dotenv = "0.15.0"
mongodb = "2.3.0"
futures = "0.3" # needed?